[package]
name = "hytale-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
hex = "0.4.3"
rand = "0.9"
reqwest = { version = "0.13", features = ["gzip", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0-rc.5"
thiserror = "2.0.18"
tiny_http = "0.12.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.8"
urlencoding = "2.1"
uuid = { version = "1", features = ["serde"] }
webbrowser = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }